# TOTK-Randomizer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
data/: enemy.txt  filesToEdit.txt  weapon.txt
data/unique/: allweapons.txt  arrowattachments.txt  bosses_dungeon.txt  bosses_nodungeon.txt  bows.txt  canholdweapons.txt  chestitems.txt  enemies.txt  enemies_nobosses.txt  heldweapons.txt  onehandedweapons.txt  readme.txt  shields.txt  twohandedweapons.txt  weaponattachments.txt  weapons.txt
include/: NXFileIO.h  indexMap.h  randomize.h  strUtil.h
src/: NXFileIO.cpp  indexMap.cpp  main.cpp  randomize.cpp
